EPBDS-5313 Fixed size of the header to avoid overlap of layouts

--- a/STUDIO/org.openl.rules.webstudio/webapp/css/layout/main.css
+++ b/STUDIO/org.openl.rules.webstudio/webapp/css/layout/main.css
@@ -7,7 +7,7 @@ html, body {
 
 #header {
     background: #fff;
-    height: 46px;
+    height: 47px;
 }
 
 #top {
